# tryllm

./: .gitignore  README.md  embedding_config.toml  embeddings_info.py  expand_citations.py  hello.py  investigate_citations_refs.py  investigate_semantic.py  llm_config.toml  llm_providers.py  project.py  pyproject.toml  rebuild_embeddings.py  research_assistant.py  try_pdf_wordcount.py  try_semantic.py  use_assistant.py  use_embedder.py
